[build-system]
requires = ["setuptools", "setuptools-golang"]
build-backend = "setuptools.build_meta"

[project]
name = "h-node"
authors = [{ name = "iwehf", email = "henry.lee@crynux.ai" }]
description = "Crynux Network Node for training and inferencing"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "celery[redis]~=5.3.1",
    "pyyaml~=5.3.1",
    "web3~=6.8.0",
    "anyio~=3.7.1",
    "sqlalchemy~=2.0.20",
    "aiosqlite~=0.19.0",
    "fastapi~=0.101.1",
    "hypercorn~=0.14.4",
    "httpx~=0.24.1",
    "pydantic~=2.2.1",
    "pydantic-settings~=2.0.3",
    "importlib-resources~=6.0.0",
    "python-multipart==0.0.6",
    "tenacity~=8.2.3",
]
version = "0.2.1"

[tool.setuptools.packages.find]
where = ["src"]
include = ["h_server*", "h_worker*"]

[tool.setuptools.package-data]
"h_server.contracts.abi" = ["*.json"]

[project.optional-dependencies]
test = ["pytest~=7.4.0", "Pillow"]
